--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
-NotEmpty=Este campo es requerido
-NotNull=Este campo es requerido
+NotEmpty=Este campo es requerido.
+NotNull=Este campo es requerido.
+Past=Solamente puede ingresar fechas pasadas.
